<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtOutput"
        android:layout_width="361dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#AAAAAA"
        android:ems="10"
        android:hint="@string/txtNumberOutputHint"
        android:inputType="numberDecimal|numberSigned"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEquals"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnEquals"
        app:layout_constraintTop_toBottomOf="@+id/txtNumber" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btnDivideClick"
        android:text="@string/btnDivide"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btnMultiply"
        app:layout_constraintEnd_toEndOf="@id/btnMultiply" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btnEqualsClick"
        android:text="@string/btnEquals"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn7" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btnPlusClick"
        android:text="@string/btnPlus"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btnEquals"
        app:layout_constraintEnd_toEndOf="@id/btnEquals" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:backgroundTint="#FF0000"
        android:onClick="btnClearClick"
        android:text="@string/btnClear"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btnEquals"
        app:layout_constraintEnd_toStartOf="@+id/btn0" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btnMinusClick"
        android:text="@string/btnMinus"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btnPlus"
        app:layout_constraintEnd_toEndOf="@id/btnPlus" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btnMultiplyClick"
        android:text="@string/btnMultiply"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btnMinus"
        app:layout_constraintEnd_toEndOf="@id/btnMinus" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn0Click"
        android:text="@string/btn0"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEquals"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn1Click"
        android:text="@string/btn1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toEndOf="@id/btn4" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn2Click"
        android:text="@string/btn2"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btn5"
        app:layout_constraintEnd_toEndOf="@id/btn5" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn3Click"
        android:text="@string/btn3"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btn6"
        app:layout_constraintEnd_toEndOf="@id/btn6" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn4Click"
        android:text="@string/btn4"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toEndOf="@id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn5Click"
        android:text="@string/btn5"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toEndOf="@id/btn8" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn6Click"
        android:text="@string/btn6"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="@id/btn9" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn7Click"
        android:text="@string/btn7"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn8" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn8Click"
        android:text="@string/btn8"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toEndOf="@id/btn0" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:width="75dp"
        android:height="75dp"
        android:onClick="btn9Click"
        android:text="@string/btn9"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn8" />

    <EditText
        android:id="@+id/txtNumber"
        android:layout_width="361dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#AAAAAA"
        android:editable="true"
        android:ems="10"
        android:hint="@string/txtNumbersHint"
        android:inputType="number"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEquals"
        app:layout_constraintStart_toStartOf="@+id/btnEquals"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>